--- a/src/style.css
+++ b/src/style.css
@@ -132,8 +132,10 @@ main {
 
 .plus-story {
   position: absolute;
-  left: 2.3rem;
-  bottom: 1.8rem;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 .stories-container .stories p {
   text-align: left;
@@ -141,7 +143,6 @@ main {
   line-height: 1;
 }
 .stories p small {
-  font-weight: bold;
   color: white;
   letter-spacing: 0.5px;
   position: absolute;
@@ -205,7 +206,7 @@ main {
   transition: 0.5s;
 }
 
-.create-story {
+/* .create-story {
   background-image: url(https://random.imagecdn.app/500/156);
   background-size: cover;
   background-position: center;
@@ -214,8 +215,8 @@ main {
   border-radius: 0;
   position: relative;
   z-index: 2;
-}
-.story-1 {
+} */
+/* .story-1 {
   background-image: url(https://random.imagecdn.app/500/157);
   background-size: cover;
   background-position: center;
@@ -263,7 +264,7 @@ main {
   background-position: center;
   width: 100%;
   height: 100%;
-}
+} */
 
 /* =============== Making RIght SIde Scroll Bar None ================ */
 .rightScroll::-webkit-scrollbar {
